# Rust-Tcp

./: .gitignore  README.md
tcp-server/: Cargo.toml
tcp-server/src/: config.toml  main.rs
tcp-server/src/data/: database.rs  mock_database.rs  mod.rs  sqlite_database.rs  test_sqlite_db.rs
tcp-server/src/http/: http_header.rs  http_method.rs  http_path.rs  http_request.rs  http_response.rs  mod.rs
tcp-server/src/models/: base_model.rs  mod.rs  sensor_model.rs  session_model.rs  session_sensor_data.rs  session_sensor_data_model.rs  session_sensor_model.rs  user_model.rs  user_models.rs
tcp-server/src/views/: 404.html  index.html
