[package]
name = "tcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.3"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.39"
rusqlite = { version = "0.33.0", features = ["bundled"] }
